# OpenNfrGui-5.0-1

./: ChangeLog  README.md  configure.ac  enigma2.bb  keyids.py  mytest.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/Infopanel/: Flash_local.py  InstallTarGZ.py  Makefile.am  Net_test.py  SpinnerSelectionBox.py  SpinnerSelector.py  bootlogo.py  bootvideo.py  outofflash.py  outofflash1.py  plugin.py  plugin.py_
lib/python/Plugins/Extensions/MediaPortal/: LICENSE  Makefile.am  __init__.py  keymap.xml  plugin.py
lib/python/Plugins/Extensions/MediaPortal/additions/: Makefile.am  additions.xml
lib/python/Plugins/Extensions/MediaPortal/icons/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/icons_bw/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/icons_zoom/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/images/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/resources/: Makefile.am  animations.xml  api.py  cannalink.py  choiceboxext.py  configlistext.py  coverhelper.py  cvevosignalgoextractor.py  debuglog.py  eightieslink.py  fetcher.py  firedriveshared.py  fusion.py  hlsplayer.py  hosters.xml  httpplayer.py  imports.py  keyboardext.py  m3u8.py  menuhelper.py  messageboxext.py  mp_globals.py  mpscreen.py  mtvdelink.py  mv_client_v12.py  myvideolink.py  packer.py  tmdb.py  (+17 more)
lib/python/Plugins/Extensions/NFR4XBoot/: download_images.py
lib/python/Plugins/Extensions/NFR4XBoot-sh4/: download_images.py  ex_init.py  nfr4xboot.py  plugin.py
lib/python/Plugins/Extensions/e2speedtest/: Makefile.am  plugin.py
(+387 files in other folders)
